// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getBinaryPath > when platform is %p darwin > returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath > when platform is %p linux > returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath > when platform is %p win32 > returns CLI filepath 1`] = `"directory/name.exe"`;

exports[`getDownloadObject > when OS is %p and arch is %p darwin arm > gets download object 1`] = `
{
  "binaryDirectory": "gh_2.27.0_macOS_arm/bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_macOS_arm.tar.gz",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p darwin x32 > gets download object 1`] = `
{
  "binaryDirectory": "gh_2.27.0_macOS_386/bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_macOS_386.tar.gz",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p darwin x64 > gets download object 1`] = `
{
  "binaryDirectory": "gh_2.27.0_macOS_amd64/bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_macOS_amd64.tar.gz",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p linux arm > gets download object 1`] = `
{
  "binaryDirectory": "gh_2.27.0_linux_arm/bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_linux_arm.tar.gz",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p linux x32 > gets download object 1`] = `
{
  "binaryDirectory": "gh_2.27.0_linux_386/bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_linux_386.tar.gz",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p linux x64 > gets download object 1`] = `
{
  "binaryDirectory": "gh_2.27.0_linux_amd64/bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_linux_amd64.tar.gz",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p win32 arm > gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_windows_arm.zip",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p win32 x32 > gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_windows_386.zip",
}
`;

exports[`getDownloadObject > when OS is %p and arch is %p win32 x64 > gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://github.com/cli/cli/releases/download/v2.27.0/gh_2.27.0_windows_amd64.zip",
}
`;
